add cleaned data

--- a/data/data-cleaning.ipynb
+++ b/data/data-cleaning.ipynb
@@ -970,11 +970,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "agg.to_csv(\"clean_costar_data.csv\")"
+    "agg.reset_index(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agg.to_csv(\"clean_costar_data.csv\", index=False)"
    ]
   },
   {
